# Coro-Roro

./: .gitignore  CMakeLists.txt  CMakeLists_new.txt  COROUTINES.md  CURSOR.md  LICENSE  PERFORMANCE_PLAN.md  README.md  TODO.md  test_coroutines_single_header.h
docs/: API_COMPARISON.md  COROUTINES.md  CRASH_ANALYSIS.md  CURSOR.md  OLD_SCHEDULER_API.md  OLD_TEST_HEADERS.md  PERFORMANCE_PLAN.md  README_NEW_IMPLEMENTATION.md  SCHEDULER.md  TODO.md  WELL_COMMENTED_CODE.md
docs/reference_code/coop/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
docs/reference_code/coop/include/coop/: event.hpp  scheduler.hpp  source_location.hpp  task.hpp
docs/reference_code/coop/include/coop/detail/: api.hpp  blockingconcurrentqueue.h  concurrentqueue.h  lightweightsemaphore.h  promise.hpp  tracer.hpp  work_queue.hpp
docs/reference_code/coop/src/: CMakeLists.txt  event.cpp  scheduler.cpp  work_queue.cpp
docs/reference_code/coop/test/: CMakeLists.txt
include/corororo/: corororo.h
include/corororo/coroutine/: async_task.h  async_task.hpp  awaiter.h  awaiter.hpp  execution_context.h  execution_context.hpp  promise.h  promise.h.backup  promise.hpp  task.h  task.hpp  task_state.h  task_state.hpp  thread_affinity.h  thread_affinity.hpp  types.h  types.hpp
include/corororo/detail/: awaiters.h  cancellation_token.h  cancellation_token_impl.h  continuation.h  enums.h  forward_declarations.h  interval_task.h  interval_task_impl.h  logging.h  macros.h  promise.h  scheduler.h  scheduler_concept.h  scheduler_extensions.h  task_aliases.h  task_base.h  transfer_policy.h  transfer_policy_impl.h  utils.h
include/corororo/scheduler/: cancellation_token.h  delayed_task.h  forced_affinity_task.h  forced_thread_affinity.h  interval_task.h  schedulable_task.h  scheduled_task.h  scheduler.cpp  scheduler.h  scheduler.h.backup  scheduler.hpp  task_id.h  worker_pool.cpp  worker_pool.h  worker_pool.hpp
include/corororo/util/: macros.h  macros.hpp  run_coroutine_inline.h  run_coroutine_inline.hpp
single_file_test/: single_file_test.cpp  utils.h
single_header_test/: test_coroutines_single_header.h
test/: CMakeLists.txt  build_and_run_with_tracy_cmd_capture.bat  build_and_run_with_tracy_profiler.bat  callable_tests.cpp  coroutine_task_tests.cpp  dummy_scheduler_tests.cpp  exception_tests.cpp  interval_tests.cpp  landsandboat_simulation.cpp  landsandboat_simulation.h  performance_tests.cpp  scheduler_basic_tests.cpp  scheduler_complex_workload_tests.cpp  scheduler_interval_tests.cpp  scheduler_performance_tests.cpp  scheduler_pressure_tests.cpp  scheduler_tests.cpp  simple_test.cpp  simple_tests.cpp  test_new_basic.cpp  test_utils.h  thread_verifier_tests.cpp  tracy_test.cpp  worker_pool_tests.cpp
test/new/: HISTORICAL_PERFORMANCE_ANALYSIS.md  complex_workload_tests.cpp  interval_tests.cpp  performance_tests.cpp  pressure_tests.cpp  scheduler_interval_tests.cpp  thread_verifier_tests.cpp  worker_pool_tests.cpp
test/old/: CMakeLists.txt  COMPREHENSIVE_TEST_COVERAGE.md  README.md  delayed_interval_basic_test.cpp  performance_tests.cpp  pressure_tests.cpp  worker_pool_tests.cpp
test/tracy/: build_and_run_with_tracy_cmd_capture.bat  build_and_run_with_tracy_profiler.bat
